--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Test.Test
-EditorStartupMap=/Game/Maps/Test.Test
+GameDefaultMap=/Game/Maps/Interpolation.Interpolation
+EditorStartupMap=/Game/Maps/Interpolation.Interpolation
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
